# darktable-auto-rating

./: .gitignore  Brewfile  CLAUDE.md  README.md  setup-build.sh
.azure-pipelines/: azure-pipelines.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md
data/: CMakeLists.txt  ai_models.json
src/: CMakeLists.txt
src/ai/: backend_common.c
src/common/: ai_models.c
src/common/ai/: aesthetic_rating.c  aesthetic_rating.h
src/gui/: preferences_ai.c
src/libs/: CMakeLists.txt
src/libs/tools/: auto_rating.c
tools/: generate_nima_model.py  launch.sh  setup-build.sh
